tests/ui/splat/splat-255-limit-fail.stderr
error: `#[splat]` is only supported on argument index 254 or less, this `#[splat]` is on index 255
  --> $DIR/splat-255-limit-fail.rs:50:5
   |
LL |     #[splat] (_a, _b): (u32, i8),
   |     ^^^^^^^^ `#[splat]` is not supported here
   |
   = help: remove `#[splat]`, or use it on an argument closer to the start of the argument list

error: `#[splat]` is only supported on argument index 254 or less, this `#[splat]` is on index 256
  --> $DIR/splat-255-limit-fail.rs:71:5
   |
LL |     #[splat] (_a, _b): (u32, i8),
   |     ^^^^^^^^ `#[splat]` is not supported here
   |
   = help: remove `#[splat]`, or use it on an argument closer to the start of the argument list

error: `#[splat]` is only supported on argument index 254 or less, this `#[splat]` is on index 255
  --> $DIR/splat-255-limit-fail.rs:91:5
   |
LL |     #[splat] (_a, _b): (u32, i8),
   |     ^^^^^^^^ `#[splat]` is not supported here
   |
   = help: remove `#[splat]`, or use it on an argument closer to the start of the argument list

error: `#[splat]` is only supported on argument index 254 or less, this `#[splat]` is on index 256
  --> $DIR/splat-255-limit-fail.rs:113:5
   |
LL |     #[splat] (_a, _b): (u32, i8),
   |     ^^^^^^^^ `#[splat]` is not supported here
   |
   = help: remove `#[splat]`, or use it on an argument closer to the start of the argument list

error[E0057]: this splatted function takes 256 arguments, but 255 were provided
  --> $DIR/splat-255-limit-fail.rs:124:5
   |
LL | /     more_than_255_splatted_args(
LL | |         a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
LL | |         a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
LL | |         a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
...  |
LL | |         /* missing: a, */
LL | |     );
   | |_____^

error[E0057]: this splatted function takes 256 arguments, but 257 were provided
  --> $DIR/splat-255-limit-fail.rs:144:5
   |
LL | /     more_than_255_splatted_args(
LL | |         a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
LL | |         a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
LL | |         a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
...  |
LL | |         a, /* unexpected: */ a,
LL | |     );
   | |_____^

error[E0057]: this splatted function takes 256 arguments, but 512 were provided
  --> $DIR/splat-255-limit-fail.rs:164:5
   |
LL | /     more_than_255_splatted_args(
LL | |         a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
LL | |         a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
LL | |         a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
...  |
LL | |         a,
LL | |     );
   | |_____^

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0057`.
